scripts/log.txt
file:///home/sou/Bureau/suaps/scripts/auto-res.js:14
  enregistrerLogReservation,
  ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module './utils/database.js' does not provide an export named 'enregistrerLogReservation'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.17.0
